Updated UL style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </button>
     <input type="image" src="search.png" width="25" height="25">
     <input type="text" id="myInput" style="font-size: 18px;border-radius: 30px; width: 650px; height: 50px; margin-left: 380px; margin-bottom:10px; padding-left: 40px;" onkeyup="myFunction()" placeholder="Physion">
-    <ul id="myUL" style="margin-top:20px; margin-left:370px;flex-shrink: 5;max-width: 650px;  line-height: 1.5;">
+      <ul id="myUL" style="margin-top:20px; margin-left:370px;flex-shrink: 5;max-width: 650px;  line-height: 1.5; list-style-type: none;">
       <li>
         <a href=https://www.academia.edu/download/40528202/The_Core_Deficit_in_Autism_and_Disorders20151130-26915-1mslq6d.pdf#page=51>Studies of theory of mind: Are intuitive physics and intuitive psychology independent</a>
       </li>
